# GITA

./: README.md  data_builder.py  pyproject.toml
checkpoints/Vision_Text/GVLQA_BASE/connectivity/llava-v1.5-13b-lora(128, 256)-unfreeze_vit-False-epoch-1/: adapter_config.json  config.json  trainer_state.json
checkpoints/Vision_Text/GVLQA_BASE/connectivity/llava-v1.5-7b-lora(128, 256)-unfreeze_vit-False-epoch-1/: adapter_config.json  config.json  trainer_state.json
checkpoints/Vision_Text/GVLQA_BASE/cycle/llava-v1.5-13b-lora(128, 256)-unfreeze_vit-False-epoch-10/: adapter_config.json  config.json  trainer_state.json
checkpoints/Vision_Text/GVLQA_BASE/cycle/llava-v1.5-7b-lora(128, 256)-unfreeze_vit-False-epoch-20/: adapter_config.json  trainer_state.json
checkpoints/Vision_Text/GVLQA_BASE/flow/llava-v1.5-13b-lora(128, 256)-unfreeze_vit-False-epoch-10/: adapter_config.json  trainer_state.json
checkpoints/Vision_Text/GVLQA_BASE/flow/llava-v1.5-7b-lora(128, 256)-unfreeze_vit-False-epoch-20/: adapter_config.json  trainer_state.json
data_builder/: nodecls_builder.py  nodecls_modules.py
fastchat/: conversation.py
fastchat/custom_eval/: eval.py
fastchat/train/: linkpred_builder.py  nodecls_builder.py  train.py  train_lora.py
llava/: conversation.py  test_topo.py
llava/custom_eval/: aug_eval.py  eval.py
llava/model/: builder.py
llava/train/: linkpred_builder.py  llava_trainer.py  nodecls_builder.py  train.py  train_mem.py
scripts/: zero3_offload.json
scripts/eval/: eval.sh  eval_loop.sh
scripts/train/: finetune_lora.sh  finetune_lora_loop.sh  test.sh
(+17 files in other folders)
